# car-sim

./: .gitignore  Using poetry.md  main.py  pyproject.toml  simulate.py
.devcontainer/: Dockerfile  devcontainer.json
src/: bicycle_model.py  interface.py  simulate.py
